--- a/css/style.css
+++ b/css/style.css
@@ -17,29 +17,17 @@ a {
   text-decoration: none;
 }
 
-h1, .not-figure {
+.h1, .not-figure {
   margin-bottom: 40px;
 }
 
-h2, h3 {
+.h2, .h3 {
   margin-bottom: 10px;
 }
 
-p {
+.par {
   margin-bottom: 40px;
   width: 872px;
-}
-
-ul {
-  padding-left: 15px;
-}
-
-li {
-  margin-bottom: 20px;
-}
-
-li:last-child {
-  margin-bottom: 0;
 }
 
 img {
@@ -70,8 +58,12 @@ body {
   padding: 24px 49px;
 }
 
-.module {
+.link a {
   margin-right: 25px;
+}
+
+.link a:last-child {
+  margin-right: 0;
 }
 
 .container {
@@ -87,17 +79,29 @@ body {
   margin-bottom: 40px;
 }
 
-.grey-block p {
-  width: 692px;
-  margin-bottom: 10px;
-}
-
 .grey-block:last-of-type {
   margin: 0;
 }
 
-.grey-block:last-of-type p {
+.grey-block .par {
+  width: 692px;
+  margin-bottom: 10px;
+}
+
+.grey-block .ul {
+  padding-left: 15px;
+}
+
+.grey-block .li {
+  margin-bottom: 20px;
+}
+
+.grey-block .li:last-child {
   margin-bottom: 0;
+}
+
+.not-figure {
+  margin-bottom: 40px;
 }
 
 .figure {
