--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,13 @@ a {
   text-decoration: none;
 }
 
-.h1, .not-figure {
+.h1,
+.not-figure {
   margin-bottom: 40px;
 }
 
-.h2, .h3 {
+.h2,
+.h3 {
   margin-bottom: 10px;
 }
 
@@ -55,14 +57,14 @@ body {
 .link {
   display: inline-block;
   margin-bottom: 50px;
+}
+
+.ref-link {
+  margin-right: 25px;
   padding: 24px 49px;
 }
 
-.link a {
-  margin-right: 25px;
-}
-
-.link a:last-child {
+.ref-link:last-child {
   margin-right: 0;
 }
 
@@ -83,20 +85,20 @@ body {
   margin: 0;
 }
 
-.grey-block .par {
+.par-grey-block {
   width: 692px;
   margin-bottom: 10px;
 }
 
-.grey-block .ul {
+.ul-grey-block {
   padding-left: 15px;
 }
 
-.grey-block .li {
+.li-grey-block {
   margin-bottom: 20px;
 }
 
-.grey-block .li:last-child {
+.li-grey-block:last-child {
   margin-bottom: 0;
 }
 
